package ru.savin.videostreamingauth;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class VideoStreamingAuthApplication {
    public static void main(String[] args) {
        SpringApplication.run(VideoStreamingAuthApplication.class, args);
    }
}
