package ru.savin.videostreamingauth.constant;

public class AllowedRequestMatchers {
    public static final String LOGIN_PATH = ControllerConstant.ROOT_PATH + "auth/login";
    public static final String TOKEN_PATH = ControllerConstant.ROOT_PATH + "auth/token";
    public static final String REFRESH_TOKEN_PATH = ControllerConstant.ROOT_PATH + "auth/refresh";
    public static final String REGISTER_USER_PATH = ControllerConstant.ROOT_PATH + "users";
}
