package ru.savin.videostreamingauth.constant;

public class ControllerConstant {
    public static final String ROOT_PATH = "/api/video-streaming-auth-service/";
}
